--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,8 @@ dmypy.json
 .idea/inspectionProfiles/profiles_settings.xml
 *.xml
 *.iml
+.DS_Store
+MicroTools/.DS_Store
+.DS_Store
+MicroTools/.DS_Store
+.DS_Store
